<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical">

    <include layout="@layout/base_title_bar_layout" />


    <com.tencent.qcloud.tuicore.component.LineControllerView
        android:id="@+id/siv_search_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/group_profile_item_height"
        android:layout_marginTop="@dimen/qb_px_20"
        app:isSwitch="true"
        app:name="@string/seal_privacy_search_phone" />



    <com.tencent.qcloud.tuicore.component.LineControllerView
        android:id="@+id/siv_friend_verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/group_profile_item_height"
        android:layout_marginTop="@dimen/qb_px_20"
        app:isSwitch="true"
        app:name="@string/seal_privacy_friend_verify" />



    <com.pingmo.chengyan.customview.SettingItemView
        android:id="@+id/siv_group_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_content="@string/seal_privacy_group_verify"
        app:item_switch="true"
        tools:visibility="visible"
        android:visibility="gone"
        />



    <com.tencent.qcloud.tuicore.component.LineControllerView
        android:layout_marginTop="@dimen/qb_px_20"
        android:id="@+id/siv_modify_login_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_46"
        app:canNav="true"
        app:isTop="true"
        app:name="修改登录密码" />

    <com.tencent.qcloud.tuicore.component.LineControllerView
        android:layout_marginTop="@dimen/qb_px_20"
        android:id="@+id/siv_login_device_management"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_46"
        app:canNav="true"
        app:isTop="true"
        app:name="登录设备管理" />



    <com.pingmo.chengyan.customview.SettingItemView
        android:id="@+id/siv_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_privacy_item_height"
        app:item_content="注销删除更改账号"
        app:item_right_image="@drawable/seal_ic_mine_go"
        android:visibility="gone"
        />

    <com.pingmo.chengyan.customview.SettingItemView
        android:id="@+id/siv_equipment_record"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seal_privacy_item_height"
        android:layout_marginTop="@dimen/seal_privacy_item_margin"
        app:item_content="登录设备管理"
        app:item_right_image="@drawable/seal_ic_mine_go"
        android:visibility="gone"
        />



    <com.tencent.qcloud.tuicore.component.LineControllerView
        android:layout_marginTop="@dimen/qb_px_20"
        android:id="@+id/siv_blacklist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_46"
        app:canNav="true"
        app:isTop="true"
        app:name="@string/seal_privacy_blacklist" />



    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>