<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/demo_profile_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/self_detail_area"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_90"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/page_margin">

                <com.tencent.qcloud.tuicore.component.gatherimage.ShadeImageView
                    android:id="@+id/self_icon"
                    android:layout_width="@dimen/qb_px_46"
                    android:layout_height="@dimen/qb_px_46"
                    android:layout_gravity="start"
                    android:scaleType="centerCrop"
                    android:layout_marginLeft="@dimen/qb_px_5"
                    android:layout_marginRight="@dimen/qb_px_15"
                    android:layout_marginTop="-12dp" />

                    <TextView
                        android:id="@+id/self_nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/self_icon"
                        android:layout_toEndOf="@id/self_icon"
                        android:layout_marginBottom="@dimen/qb_px_12"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/qb_px_18"
                        tools:text="林"/>

                    <TextView
                        android:id="@+id/self_account_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/self_nick_name"
                        android:layout_below="@id/self_nick_name"
                        android:layout_toEndOf="@id/self_icon"
                        android:layout_marginTop="-8dp"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/qb_px_12"
                        android:text="@string/demo_account_tag" />

                    <TextView
                        android:id="@+id/self_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/self_account_tag"
                        android:layout_toEndOf="@id/self_account_tag"
                        android:layout_below="@id/self_nick_name"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/qb_px_12"
                        tools:text="99618" />

                    <TextView
                        android:id="@+id/self_signature_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/self_account_tag"
                        android:layout_below="@id/self_account_tag"
                        android:layout_marginTop="3.8dp"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/qb_px_12"
                        android:text="@string/demo_signature_tag" />


                <TextView
                        android:id="@+id/self_signature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/self_signature_tag"
                        android:layout_alignTop="@id/self_signature_tag"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/qb_px_12"
                        tools:text="相信光" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/self_account_tag"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/arrow_right" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.tencent.qcloud.tuicore.component.LineControllerView
                    android:id="@+id/modify_allow_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/qb_px_46"
                    android:layout_marginTop="10dp"
                    app:name="@string/add_rule" />

                <include layout= "@layout/profile_custom_layout"></include>

                <com.tencent.qcloud.tuicore.component.LineControllerView
                    android:id="@+id/about_im"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/qb_px_46"
                    android:layout_marginTop="10dp"
                    app:name="@string/about_im" />

                <Button
                    android:id="@+id/logout_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="@dimen/qb_px_46"
                    android:layout_alignParentBottom="true"

                    android:textSize="16.32sp"
                    android:lineHeight="24.96sp"
                    android:text="@string/exit"
                    android:textAllCaps="false"
                    android:textColor="@color/core_error_tip_color_lively" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
