<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipChildren="false"
    android:orientation="vertical">

    <com.tencent.qcloud.tuicore.component.TitleBarLayout
        android:id="@+id/main_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/qb_px_30"
        android:orientation="horizontal">
        <!--商城-->
        <RelativeLayout
            android:id="@+id/conversation_btn_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tabClick">

            <ImageView
                android:id="@+id/tab_conversation_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_image_find"

                />

            <TextView
                android:id="@+id/conversation"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tab_conversation_icon"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/tab_conversation_tab_text"

                android:textColor="@drawable/main_text_message"
                android:textSize="12sp" />

            <com.tencent.qcloud.tuicore.component.UnreadCountTextView
                android:id="@+id/msg_total_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:minWidth="18.4dp"
                android:minHeight="18.4dp"
                android:textSize="13.6sp"
                android:visibility="gone"
                tools:ignore="RtlCompat" />

        </RelativeLayout>
        <!--通讯录-->
        <RelativeLayout
            android:id="@+id/contact_btn_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tabClick">

            <ImageView
                android:id="@+id/tab_contact_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_image_adress" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tab_contact_icon"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/tab_contact_tab_text"
                android:textColor="@drawable/main_text_message"
                android:textSize="12sp" />

            <com.tencent.qcloud.tuicore.component.UnreadCountTextView
                android:id="@+id/new_friend_total_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-8dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@id/contact"
                android:gravity="center"
                android:includeFontPadding="false"
                android:minWidth="18.4dp"
                android:minHeight="18.4dp"
                android:textSize="13.6sp"
                android:visibility="gone"
                tools:ignore="RtlCompat" />
        </RelativeLayout>
        <!--消息-->
        <RelativeLayout
            android:id="@+id/contact_btn_find_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tabClick">

            <ImageView
                android:id="@+id/tab_contact_find__icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_image_message" />

            <TextView
                android:id="@+id/contact_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tab_contact_find__icon"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/tab_contact_three_text"
                android:textColor="@drawable/main_text_message"
                android:textSize="12sp" />

            <com.tencent.qcloud.tuicore.component.UnreadCountTextView
                android:id="@+id/new_friend_find_total_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-8dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@id/contact_find"
                android:gravity="center"
                android:includeFontPadding="false"
                android:minWidth="18.4dp"
                android:minHeight="18.4dp"
                android:textSize="13.6sp"
                android:visibility="gone"
                tools:ignore="RtlCompat" />
        </RelativeLayout>
        <!--我的-->
        <RelativeLayout
            android:id="@+id/myself_btn_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="tabClick">

            <ImageView
                android:id="@+id/tab_profile_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_image_me" />

            <TextView
                android:id="@+id/mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tab_profile_icon"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/tab_profile_tab_text"
                android:textColor="@drawable/main_text_message"
                android:textSize="12sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
